# dmsa-forge

./: .gitignore  LICENSE  NOTICE.md  README.md  dmsa-forge.py  dmsaforge.py  pyproject.toml
.github/workflows/: test.yml
assets/: README.fr.md  README.zh-CN.md  advanced.fr.md  advanced.md  advanced.zh-CN.md
dmsa_forge/: __init__.py  __main__.py  ad_utils.py  cli.py  cli_metadata.py  completion.py  kerberos.py  reporting.py  self_update.py
tests/: test_cli.py
